--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,11 @@
 <!-- FILE: /app/index.html
-     RCF — INDEX DIAG (BOOT SCREEN) — vDIAG-1
-     Objetivo: mostrar na tela qual módulo travou/errou, sem console.
+     RControl Factory — index.html (vCLEAN-1+ENGINE + VENDOR ZIP + PAGES LINKS + EXTRAS3 + SWVER)
+     PATCH:
+     - mantém DEGRAU 3 (auto extra-modules SAFE + 1 reload)
+     - mantém ZIP modules carregando DEPOIS do app.js (evita botão sumir)
+     - adiciona/garante "./js/core/pages_links.js"
+     - mantém base "./" e guards anti-boot duplicado
+     - ✅ SW VERSIONED REGISTER (iOS cache breaker): ./sw.js?v=BUILD
 -->
 <!doctype html>
 <html lang="pt-BR">
@@ -9,48 +14,39 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>RCF</title>
   <meta name="theme-color" content="#0b1020" />
+
+  <!-- PADRÃO: base relativo (Pages/subpath safe) -->
   <base href="./" />
+
   <link rel="manifest" href="./manifest.json" />
   <link rel="stylesheet" href="./styles.css" />
-  <meta name="rcf-index" content="vDIAG-1" />
-  <style>
-    /* fallback caso styles.css não carregue */
-    body{background:#0b1020;color:#e8ecff;font-family:ui-monospace,SFMono-Regular,Menlo,monospace;}
-    .diag{padding:14px;white-space:pre-wrap;line-height:1.25;font-size:12px;}
-    .ok{color:#8ff0a4}
-    .warn{color:#ffd37a}
-    .err{color:#ff7b7b}
-    .mut{opacity:.85}
-  </style>
+
+  <meta name="rcf-index" content="vCLEAN-1+ENGINE+VENDORZIP+PAGESLINKS+EXTRAS3+SWVER" />
 </head>
 
 <body>
+  <noscript>Ative o JavaScript para usar o app.</noscript>
+
   <div id="app">
-    <div class="diag" id="diag">RCF BOOT DIAG…\n</div>
+    <div style="padding:14px;font-family:system-ui">Carregando…</div>
   </div>
 
   <script>
     (function () {
+      // ✅ Guard: evita carregar tudo 2x em edge cases
       if (window.__RCF_INDEX_BOOTED__) return;
       window.__RCF_INDEX_BOOTED__ = true;
 
-      const diagEl = document.getElementById("diag");
-      function line(txt, cls){
-        try {
-          const d = document.createElement("div");
-          if (cls) d.className = cls;
-          d.textContent = txt;
-          diagEl.appendChild(d);
-        } catch {}
-      }
-      function hr(){ line("—".repeat(36), "mut"); }
+      // ✅ BUILD do SW (troque quando quiser forçar “quebra-cache”)
+      // Dica: mude só esse valor e publique -> iPhone pega na hora.
+      const RCF_SW_BUILD = "RCF_SW_BUILD_2026_02_22_01";
+
+      function log(){ try { console.log.apply(console, ["[RCF/index]"].concat([].slice.call(arguments))); } catch(e){} }
 
       function loadScript(src){
         return new Promise((resolve, reject) => {
           const s = document.createElement("script");
-          // quebra cache forte por querystring (não depende de SW)
-          const bust = "v=" + Date.now();
-          s.src = src + (src.includes("?") ? "&" : "?") + bust;
+          s.src = src;
           s.async = false;
           s.onload = () => resolve(src);
           s.onerror = () => reject(new Error("load failed: " + src));
@@ -58,16 +54,81 @@
         });
       }
 
-      async function boot(){
-        line("BOOT: starting… base=" + document.baseURI, "mut");
-        hr();
+      // =========================================================
+      // DEGRAU 3 — AUTO EXTRA MODULES (SAFE + 1 reload)
+      // =========================================================
+      function ensureExtraModules(){
+        const KEY = "rcf:boot:extra_modules";
+        const GUARD = "rcf:extra_modules_installed:v1";
+        const MUST = [
+          "./js/core/agent_tools_panel.js",
+          "./js/core/agent_scanmap.js"
+        ];
 
+        // evita loop de reload
+        try {
+          if (sessionStorage.getItem(GUARD) === "1") return { changed:false, already:true };
+        } catch {}
+
+        let cur = [];
+        try {
+          const raw = localStorage.getItem(KEY);
+          const j = raw ? JSON.parse(raw) : [];
+          cur = Array.isArray(j) ? j : [];
+        } catch {
+          cur = [];
+        }
+
+        const norm = (p) => String(p || "").trim();
+        const set = new Set(cur.map(norm).filter(Boolean));
+
+        let changed = false;
+        for (const p of MUST) {
+          const x = norm(p);
+          if (!set.has(x)) { set.add(x); changed = true; }
+        }
+
+        const list = Array.from(set).sort((a,b)=>a.localeCompare(b));
+
+        if (changed) {
+          try { localStorage.setItem(KEY, JSON.stringify(list)); } catch {}
+          try { sessionStorage.setItem(GUARD, "1"); } catch {}
+          return { changed:true, list };
+        }
+
+        // marcou como ok (sem precisar reload)
+        try { sessionStorage.setItem(GUARD, "1"); } catch {}
+        return { changed:false, list };
+      }
+
+      async function boot(){
+        log("BOOT: starting… base=", document.baseURI);
+
+        // ✅ roda antes de qualquer coisa que dependa do boot extra
+        try {
+          const r = ensureExtraModules();
+          if (r && r.changed) {
+            log("DEGRAU3: extra_modules atualizado -> reload 1x", r.list || []);
+            try { location.reload(); return; } catch {}
+          } else {
+            log("DEGRAU3: extra_modules ok");
+          }
+        } catch (e) {
+          log("DEGRAU3: falhou (ignorado)", (e && e.message) ? e.message : e);
+        }
+
+        // =========================================================
+        // 1) CORE + ENGINE (antes do app.js)
+        // =========================================================
         const modules = [
           "./js/core/logger.js",
           "./js/core/stability_guard.js",
           "./js/core/storage.js",
+
+          /* ✅ VENDOR */
           "./js/core/vendor_loader.js",
           "./js/core/vendor_health.js",
+
           "./js/core/github_sync.js",
           "./js/core/vfs_overrides.js",
           "./js/core/vfs_shim.js",
@@ -86,51 +147,81 @@
           "./js/core/settings_cleanup.js",
           "./js/core/injector.js",
 
+          /* ✅ ENGINE */
           "./js/engine/template_registry.js",
           "./js/engine/module_registry.js",
           "./js/engine/builder.js",
           "./js/engine/engine.js",
 
+          /* ✅ PWA Links / Pages Hook */
           "./js/core/pages_links.js",
+
           "./js/admin.github.js"
         ];
 
         for (const src of modules) {
           try {
             await loadScript(src);
-            line("✅ " + src, "ok");
+            try { window.RCF_LOGGER?.push?.("BOOT", "module loaded ✅ " + src); } catch {}
+            log("module loaded ✅", src);
           } catch (e) {
-            line("❌ " + src, "err");
-            line("ERR: " + (e && (e.message || e)) , "err");
-            hr();
-            line("PAROU AQUI. Esse arquivo travou o boot.", "err");
-            return;
+            try { window.RCF_LOGGER?.push?.("WARN", "module missing/failed ❌ " + src + " :: " + (e.message||e)); } catch {}
+            log("module missing/failed ❌", src, (e.message||e));
           }
         }
 
-        hr();
-        line("Agora carregando app.js…", "mut");
-
+        // =========================================================
+        // 2) app.js (cria UI/slots)
+        // =========================================================
         try {
           await loadScript("./app.js");
-          line("✅ ./app.js", "ok");
+          try { window.RCF_LOGGER?.push?.("BOOT", "app.js loaded ✅ ./app.js"); } catch {}
+          log("app.js loaded ✅");
         } catch (e) {
-          line("❌ ./app.js", "err");
-          line("ERR: " + (e && (e.message || e)) , "err");
-          line("Se app.js falhar, a UI nunca monta e fica em Carregando.", "warn");
-          return;
+          try { window.RCF_LOGGER?.push?.("ERR", "app.js missing/failed ❌ ./app.js :: " + (e.message||e)); } catch {}
+          log("app.js missing/failed ❌", (e.message||e));
         }
 
-        hr();
-        line("Boot DIAG completou. Se ainda travar, o erro é runtime dentro do app.js ou de algum módulo.", "mut");
+        // =========================================================
+        // 3) ZIP/UI modules (depois do app.js)
+        // =========================================================
+        const afterApp = [
+          "./js/core/zip_vault.js",
+          "./js/core/agent_zip_bridge.js"
+        ];
 
-        // tenta registrar SW (opcional)
+        for (const src of afterApp) {
+          try {
+            await loadScript(src);
+            try { window.RCF_LOGGER?.push?.("BOOT", "module loaded ✅ " + src); } catch {}
+            log("module loaded ✅", src);
+          } catch (e) {
+            try { window.RCF_LOGGER?.push?.("WARN", "module missing/failed ❌ " + src + " :: " + (e.message||e)); } catch {}
+            log("module missing/failed ❌", src, (e.message||e));
+          }
+        }
+
+        // =========================================================
+        // 4) SW register (versionado) — quebra-cache iOS
+        // =========================================================
         try {
-          if ("serviceWorker" in navigator) {
-            line("SW: registrando…", "mut");
-            navigator.serviceWorker.register("./sw.js", { scope: "./" })
-              .then(() => line("SW: ok", "ok"))
-              .catch((e) => line("SW: fail/ignored: " + (e?.message||e), "warn"));
+          if (!window.__RCF_SW_REGISTERED__ && "serviceWorker" in navigator) {
+            window.__RCF_SW_REGISTERED__ = true;
+
+            const swUrl = "./sw.js?v=" + encodeURIComponent(RCF_SW_BUILD);
+
+            navigator.serviceWorker.register(swUrl, { scope: "./" })
+              .then((reg) => {
+                try { window.RCF_LOGGER?.push?.("BOOT", "sw register: ok ✅ " + swUrl); } catch {}
+                log("sw register ok", swUrl);
+
+                // tenta puxar update imediatamente (ajuda no iOS)
+                try { reg.update?.(); } catch {}
+              })
+              .catch((e) => {
+                try { window.RCF_LOGGER?.push?.("WARN", "sw register: fail/ignored :: " + (e?.message||e)); } catch {}
+                log("sw register fail/ignored:", (e?.message||e));
+              });
           }
         } catch {}
       }
