--- a/app/index.html
+++ b/app/index.html
@@ -1,187 +1,173 @@
 <!-- FILE: /app/index.html
-     RControl Factory — index.html (PADRÃO HOTFIX: APPJS TIMEOUT + CACHE-BUST)
-     - Mantém base "./"
-     - Mantém Guard __RCF_INDEX_BOOTED__
-     - Adiciona loadScript com timeout
-     - Força cache-bust SOMENTE no app.js (resolve travas de SW/cache no iOS)
+     RControl Factory — RESCUE MODE (não carrega app.js)
+     Objetivo: destravar iOS/SW/cache e te dar botões de recuperação.
 -->
 <!doctype html>
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>RCF</title>
-  <meta name="theme-color" content="#0b1020" />
-
+  <title>RCF • RESCUE</title>
   <base href="./" />
-
-  <link rel="manifest" href="./manifest.json" />
-  <link rel="stylesheet" href="./styles.css" />
-
-  <meta name="rcf-index" content="vPADRAO-HOTFIX-APPJS-TIMEOUT-BUST" />
+  <meta name="theme-color" content="#0b1020" />
+  <style>
+    body{margin:0;background:#070b12;color:#fff;font-family:system-ui}
+    .wrap{max-width:860px;margin:0 auto;padding:18px}
+    .card{border:1px solid rgba(255,255,255,.12);border-radius:14px;padding:14px;background:rgba(255,255,255,.04)}
+    .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+    .btn{padding:10px 12px;border-radius:999px;border:1px solid rgba(255,255,255,.16);background:rgba(20,28,44,.92);color:#fff;font-weight:800}
+    .btn.ok{background:#2dd4bf;color:#022;border:0}
+    .btn.danger{background:#ef4444;border:0}
+    pre{white-space:pre-wrap;word-break:break-word;background:rgba(0,0,0,.35);border:1px solid rgba(255,255,255,.12);padding:12px;border-radius:12px;max-height:55vh;overflow:auto}
+    .hint{opacity:.85}
+  </style>
 </head>
-
 <body>
-  <noscript>Ative o JavaScript para usar o app.</noscript>
+  <div class="wrap">
+    <div class="card">
+      <div class="row" style="justify-content:space-between">
+        <div>
+          <div style="font-size:18px;font-weight:900">RCF • RESCUE MODE</div>
+          <div class="hint">Se o app travou em “carregando app.js…”, use isso pra limpar SW/cache e voltar.</div>
+        </div>
+        <div style="font-size:12px;opacity:.8" id="ver">vRESCUE</div>
+      </div>
 
-  <div id="app">
-    <div style="padding:14px;font-family:system-ui">Carregando…</div>
+      <div class="row" style="margin-top:12px">
+        <button class="btn danger" id="btnUnreg">Unregister SW</button>
+        <button class="btn danger" id="btnCaches">Clear Caches</button>
+        <button class="btn danger" id="btnOverrides">Clear Overrides</button>
+        <button class="btn" id="btnBump">Bump Cache Bust</button>
+        <button class="btn ok" id="btnReload">Reload</button>
+      </div>
+
+      <div class="row" style="margin-top:10px">
+        <button class="btn" id="btnShowKeys">Show localStorage keys</button>
+        <button class="btn danger" id="btnSoftReset">Soft Reset (não apaga apps)</button>
+      </div>
+
+      <div style="margin-top:12px" class="hint">
+        Depois de limpar: clique <b>Reload</b>.  
+        Quando voltar, a gente recoloca o index padrão e corrige o app.js sem perder nada.
+      </div>
+
+      <pre id="out">Pronto.</pre>
+    </div>
   </div>
 
   <script>
-    (function () {
-      if (window.__RCF_INDEX_BOOTED__) return;
-      window.__RCF_INDEX_BOOTED__ = true;
+    (function(){
+      const out = document.getElementById("out");
+      const log = (...a) => { try { out.textContent += "\n" + a.join(" "); } catch {} try { console.log("[RCF/RESCUE]", ...a); } catch {} };
 
-      function log(){ try { console.log.apply(console, ["[RCF/index]"].concat([].slice.call(arguments))); } catch(e){} }
-
-      function loadScript(src, opts){
-        opts = opts || {};
-        const timeoutMs = Number.isFinite(opts.timeoutMs) ? opts.timeoutMs : 12000;
-
-        return new Promise((resolve, reject) => {
-          let done = false;
-          let tmr = null;
-
-          function finish(ok, payload){
-            if (done) return;
-            done = true;
-            if (tmr) { try { clearTimeout(tmr); } catch {} tmr = null; }
-            ok ? resolve(payload) : reject(payload);
-          }
-
-          try {
-            const s = document.createElement("script");
-            s.async = false;
-            s.src = src;
-
-            s.onload = () => finish(true, src);
-            s.onerror = () => finish(false, new Error("load failed: " + src));
-
-            tmr = setTimeout(() => {
-              try { s.remove(); } catch {}
-              finish(false, new Error("TIMEOUT loading: " + src + " ("+timeoutMs+"ms)"));
-            }, timeoutMs);
-
-            document.head.appendChild(s);
-          } catch (e) {
-            finish(false, e);
-          }
-        });
+      function bump(){
+        try {
+          const k = "rcf:cache_bust";
+          const v = String(Date.now());
+          localStorage.setItem(k, v);
+          log("OK bump:", k, "=", v);
+        } catch(e){ log("ERR bump:", e.message||e); }
       }
 
-      // cache-bust bem simples (só pra quebrar enrosco de SW/cache)
-      function bustKey(){
-        try {
-          const k = localStorage.getItem("rcf:cache_bust");
-          if (k) return k;
-          const n = String(Date.now());
-          localStorage.setItem("rcf:cache_bust", n);
-          return n;
-        } catch {
-          return String(Date.now());
-        }
+      async function unreg(){
+        try{
+          if(!("serviceWorker" in navigator)){ log("SW: unsupported"); return; }
+          const regs = await navigator.serviceWorker.getRegistrations();
+          let n=0;
+          for(const r of regs){ try{ if(await r.unregister()) n++; }catch{} }
+          log("SW unregistered:", n);
+        }catch(e){ log("ERR sw:", e.message||e); }
       }
 
-      async function boot(){
-        log("BOOT: starting… base=", document.baseURI);
-
-        const modules = [
-          "./js/core/logger.js",
-          "./js/core/stability_guard.js",
-          "./js/core/storage.js",
-
-          "./js/core/vendor_loader.js",
-          "./js/core/vendor_health.js",
-
-          "./js/core/github_sync.js",
-          "./js/core/vfs_overrides.js",
-          "./js/core/vfs_shim.js",
-          "./js/core/mother_selfupdate.js",
-          "./js/core/errors.js",
-          "./js/core/risk.js",
-          "./js/core/snapshot.js",
-          "./js/core/selfheal.js",
-          "./js/core/ui_safety.js",
-          "./js/core/ui_compact_outputs.js",
-          "./js/core/ui_bindings.js",
-          "./js/core/diagnostics.js",
-          "./js/core/publish_queue.js",
-          "./js/core/preview_runner.js",
-          "./js/core/policy.js",
-          "./js/core/settings_cleanup.js",
-          "./js/core/injector.js",
-
-          "./js/engine/template_registry.js",
-          "./js/engine/module_registry.js",
-          "./js/engine/builder.js",
-          "./js/engine/engine.js",
-
-          "./js/core/pages_links.js",
-          "./js/admin.github.js"
-        ];
-
-        // 1) CORE + ENGINE
-        for (const src of modules) {
-          try {
-            await loadScript(src, { timeoutMs: 12000 });
-            try { window.RCF_LOGGER?.push?.("BOOT", "module loaded ✅ " + src); } catch {}
-            log("module loaded ✅", src);
-          } catch (e) {
-            try { window.RCF_LOGGER?.push?.("WARN", "module missing/failed ❌ " + src + " :: " + (e.message||e)); } catch {}
-            log("module missing/failed ❌", src, (e.message||e));
-          }
-        }
-
-        // 2) app.js (com cache-bust + timeout maior)
-        try {
-          const appSrc = "./app.js?v=" + encodeURIComponent(bustKey());
-          log("Agora carregando app.js…", appSrc);
-
-          await loadScript(appSrc, { timeoutMs: 20000 });
-
-          try { window.RCF_LOGGER?.push?.("BOOT", "app.js loaded ✅ " + appSrc); } catch {}
-          log("app.js loaded ✅");
-        } catch (e) {
-          try { window.RCF_LOGGER?.push?.("ERR", "app.js missing/failed ❌ :: " + (e.message||e)); } catch {}
-          log("app.js missing/failed ❌", (e.message||e));
-        }
-
-        // 3) ZIP/UI modules (depois do app.js)
-        const afterApp = [
-          "./js/core/zip_vault.js",
-          "./js/core/agent_zip_bridge.js"
-        ];
-
-        for (const src of afterApp) {
-          try {
-            await loadScript(src, { timeoutMs: 12000 });
-            try { window.RCF_LOGGER?.push?.("BOOT", "module loaded ✅ " + src); } catch {}
-            log("module loaded ✅", src);
-          } catch (e) {
-            try { window.RCF_LOGGER?.push?.("WARN", "module missing/failed ❌ " + src + " :: " + (e.message||e)); } catch {}
-            log("module missing/failed ❌", src, (e.message||e));
-          }
-        }
-
-        // SW register (guard)
-        try {
-          if (!window.__RCF_SW_REGISTERED__ && "serviceWorker" in navigator) {
-            window.__RCF_SW_REGISTERED__ = true;
-            navigator.serviceWorker.register("./sw.js", { scope: "./" })
-              .then(() => {
-                try { window.RCF_LOGGER?.push?.("BOOT", "sw register: ok (scope ./)"); } catch {}
-                log("sw register ok");
-              })
-              .catch((e) => {
-                try { window.RCF_LOGGER?.push?.("WARN", "sw register: fail/ignored :: " + (e?.message||e)); } catch {}
-                log("sw register fail/ignored:", (e?.message||e));
-              });
-          }
-        } catch {}
+      async function clearCaches(){
+        try{
+          if(!("caches" in window)){ log("Caches: unsupported"); return; }
+          const keys = await caches.keys();
+          await Promise.all(keys.map(k => caches.delete(k)));
+          log("Caches deleted:", keys.length, keys.join(", "));
+        }catch(e){ log("ERR caches:", e.message||e); }
       }
 
-      boot();
+      function clearOverrides(){
+        try{
+          // suas chaves típicas
+          const keys = [
+            "rcf:RCF_OVERRIDES_MAP",
+            "RCF_OVERRIDES_MAP",
+            "rcf:mother_bundle",
+            "RCF_MOTHER_BUNDLE"
+          ];
+          for(const k of keys){
+            try{ localStorage.removeItem(k); }catch{}
+          }
+          // se existir o VFS de overrides no runtime, tenta limpar também
+          try{
+            const V = window.RCF_OVERRIDES_VFS;
+            if(V && typeof V.listFiles === "function" && typeof V.deleteFile === "function"){
+              V.listFiles().then(list => {
+                (list||[]).slice(0, 1200).forEach(p => { try{ V.deleteFile(p); }catch{} });
+              }).catch(()=>{});
+            }
+          }catch{}
+          log("Overrides cleared (keys removed).");
+        }catch(e){ log("ERR overrides:", e.message||e); }
+      }
+
+      function showKeys(){
+        try{
+          const ks=[];
+          for(let i=0;i<localStorage.length;i++){
+            const k = localStorage.key(i);
+            if(!k) continue;
+            if(k.startsWith("rcf:") || k.includes("RCF")) ks.push(k);
+          }
+          ks.sort();
+          log("Keys:", ks.length);
+          log(ks.join("\n"));
+        }catch(e){ log("ERR keys:", e.message||e); }
+      }
+
+      function softReset(){
+        try{
+          // NÃO apaga apps: rcf:apps
+          // reseta só view/active/pending e logs (opcional)
+          const keep = new Set(["rcf:apps"]);
+          const del=[];
+          for(let i=0;i<localStorage.length;i++){
+            const k = localStorage.key(i);
+            if(!k) continue;
+            if(!k.startsWith("rcf:")) continue;
+            if(keep.has(k)) continue;
+            if(k === "rcf:apps") continue;
+            // remove coisas que travam boot
+            if(
+              k === "rcf:active" ||
+              k === "rcf:pending" ||
+              k === "rcf:logs" ||
+              k === "rcf:cfg" ||
+              k === "rcf:RCF_FILE_INDEX" ||
+              k === "rcf:RCF_TARGET_MAP" ||
+              k === "rcf:ghcfg"
+            ){
+              del.push(k);
+            }
+          }
+          del.forEach(k => { try{ localStorage.removeItem(k); }catch{} });
+          log("Soft reset removed:", del.length, del.join(", "));
+        }catch(e){ log("ERR reset:", e.message||e); }
+      }
+
+      document.getElementById("btnUnreg").onclick = () => unreg();
+      document.getElementById("btnCaches").onclick = () => clearCaches();
+      document.getElementById("btnOverrides").onclick = () => clearOverrides();
+      document.getElementById("btnBump").onclick = () => bump();
+      document.getElementById("btnReload").onclick = () => location.reload();
+
+      document.getElementById("btnShowKeys").onclick = () => showKeys();
+      document.getElementById("btnSoftReset").onclick = () => softReset();
+
+      log("RESCUE ready. base=", document.baseURI);
+      bump();
     })();
   </script>
 </body>
