--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,9 @@
 <!-- FILE: app/index.html
-     RControl Factory — /app/index.html — vCLEAN-1+ENGINE (SAFE INDEX + watchdog + safe=1)
+     RControl Factory — /app/index.html — vCLEAN-1+ENGINE+STYLE (SAFE INDEX + watchdog + safe=1)
      - Anti-duplo-load (__RCF_INDEX_BOOTED__)
      - Watchdog: mostra qual script travou
-     - Modo safe: ?safe=1  (carrega só o mínimo pra isolar módulo quebrado)
+     - Modo safe: ?safe=1 (carrega mínimo pra isolar módulo quebrado)
+     - ✅ FIX: carrega ./styles.css (restaura “essência” / layout)
 -->
 <!doctype html>
 <html lang="pt-BR">
@@ -60,24 +61,20 @@
         try { log("UNHANDLED: " + (ev.reason && (ev.reason.message || ev.reason)) ); } catch {}
       });
 
-      // Watchdog: se em 10s o app não sinalizar boot, mantém essa tela com log
       setTimeout(() => {
         try {
           const booted = (window.__RCF_BOOTED__ === true) || (window.__RCF_UI_READY__ === true);
           if (!booted) {
             log("WATCHDOG: ainda não bootou (10s). Último script=" + (window.__RCF_LAST_SCRIPT__ || "(nenhum)"));
             const hint = document.getElementById("bootHint");
-            if (hint) hint.textContent =
-              "Dica: abra com ?safe=1 pra carregar só o mínimo e isolar módulo quebrado.";
+            if (hint) hint.textContent = "Dica: abra com ?safe=1 pra carregar só o mínimo e isolar módulo quebrado.";
           } else {
-            // se bootou, some com tela
             const bs = document.getElementById("bootScreen");
             if (bs) bs.style.display = "none";
           }
         } catch {}
       }, 10000);
 
-      // helper pra carregar scripts em ordem com log
       window.__RCF_LOAD_SCRIPT__ = function(src){
         return new Promise((resolve, reject) => {
           try {
@@ -99,10 +96,8 @@
 </head>
 
 <body>
-  <!-- app root -->
   <div id="app"></div>
 
-  <!-- boot / watchdog screen -->
   <div id="bootScreen">
     <div class="card">
       <div class="row" style="justify-content:space-between">
@@ -118,7 +113,6 @@
       </div>
 
       <div class="mono" id="bootLog">Pronto.</div>
-
       <div id="bootHint" style="margin-top:10px;color:var(--muted)"></div>
 
       <div class="row" style="margin-top:12px">
@@ -134,21 +128,17 @@
   </div>
 
   <script>
-    // mostra modo na UI
-    try {
-      document.getElementById("bootModeVal").textContent = (window.__RCF_SAFE_MODE__ ? "SAFE" : "NORMAL");
-    } catch {}
+    try { document.getElementById("bootModeVal").textContent = (window.__RCF_SAFE_MODE__ ? "SAFE" : "NORMAL"); } catch {}
   </script>
 
   <script>
     // ==============================
-    // LOADER EM ORDEM (sem duplicar app.js)
+    // LOADER EM ORDEM + CSS (restaura layout)
     // ==============================
     (async function(){
       const load = window.__RCF_LOAD_SCRIPT__;
       const log = window.__RCF_BOOT_LOG_PUSH__ || function(){};
 
-      // ✅ ajuste aqui se você usa cache bust via localStorage
       const bust = (() => {
         try {
           const v = localStorage.getItem("rcf:cache_bust");
@@ -156,32 +146,34 @@
         } catch { return ""; }
       })();
 
+      // ✅ carrega CSS base antes de tudo (isso devolve a “essência”)
       try {
-        // 1) Core / compat (carregue só o que EXISTE no seu deploy)
-        //    Se um desses paths não existir, o log vai mostrar.
-        //    No SAFE MODE, pula módulos extras.
+        const link = document.createElement("link");
+        link.rel = "stylesheet";
+        link.href = "./styles.css" + bust;
+        link.onload = () => log("loaded: ./styles.css" + bust);
+        link.onerror = () => log("FAIL: ./styles.css" + bust);
+        document.head.appendChild(link);
+        log("loading: ./styles.css" + bust);
+      } catch {}
+
+      try {
         const safe = (window.__RCF_SAFE_MODE__ === true);
 
-        // Ajuste os caminhos conforme seu projeto (mantive padrão do seu setup /app/js/core e /app/js/engine)
-        // Core base (mínimo)
+        // Core base
         await load("./js/core/diagnostics.js" + bust).catch(() => log("warn: diagnostics.js não carregou (ok)"));
         await load("./js/core/ui_bindings.js" + bust).catch(() => log("warn: ui_bindings.js não carregou (ok)"));
 
-        // Engine (se existir)
+        // Engine/Admin só no NORMAL
         if (!safe) {
           await load("./js/engine/engine.js" + bust).catch(() => log("warn: engine.js não carregou (ok)"));
+          await load("./js/admin.github.js" + bust).catch(() => log("warn: admin.github.js não carregou (ok)"));
+          await load("./js/core/github_sync.js" + bust).catch(() => log("warn: github_sync.js não carregou (ok)"));
         } else {
           log("SAFE MODE: pulando engine/admin módulos");
         }
 
-        // Admin/GitHub/Sync (só no normal)
-        if (!safe) {
-          await load("./js/admin.github.js" + bust).catch(() => log("warn: admin.github.js não carregou (ok)"));
-          await load("./js/core/github_sync.js" + bust).catch(() => log("warn: github_sync.js não carregou (ok)"));
-        }
-
-        // 2) APP PRINCIPAL (sempre por último)
-        //    Se você tem /app/app.js como principal, é esse.
+        // App principal por último
         await load("./app.js" + bust);
 
         log("DONE: scripts carregados");
